--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Gerenciando máquinas virtuales</li>
          <li> Docker: Creando conteiners sin dolor de cabeza</li>
-         <li> Ansible </li>
+         <li> Ansible: Infraestructura como código </li>
          <li> #Integración continua: Madurez y Productividad en el desarrollo de software </li>
          <li> Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
